2013-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/action_sequence_log_parser.cpp:
	- 最後の行動列データが登録されていなかったバグを修正

2013-06-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_message_window.cpp:
	- syncボタンに対するスロットをsyncAll()に変更

2013-06-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/draw_config.cpp:
	- デフォルト色の誤りを修正

2013-05-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/options.cpp:
	* src/model/options.h:
	* src/qt4/player_painter.cpp:
	* src/qt4/player_painter.h:
	* src/qt4/view_config_dialog.cpp:
	* src/qt4/view_config_dialog.h:
	- プレイヤの最大移動範囲を描画する機能を追加

	* src/qt4/debug_message_window.cpp:
	- ログレベルが未選択の場合はメッセージが全て消去されるように修正

2013-05-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_painter.cpp:
	- デバッグ情報のプレイヤにもキッカブルエリアが表示されるように描画処理を追加
	- フィールド上部のデバッグメッセージ表示が画面内に収まるように改行
	されるように変更

2013-05-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/evaluator_control_panel.cpp:
	- 使用しないウィジェットを表示しないようにした

2013-05-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	- 内容の更新時にもフィルタを適用するように修正
	- フィルタの文字列検索をcase insentiveに変更

2013-05-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- 小ウインドウがすべて自動で閉じられるように修正

	* src/qt4/action_sequence_selector.cpp:
	- アイテム選択時の自動スクロールを追加

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- 親ウインドウを閉じた時に小ウインドウも自動で閉じられるようにした
	- 表示メッセージ調整
	- ウインドウサイズ調整

	* src/model/action_sequence_log_parser.cpp:
	- 行動列のデバッグ出力フォーマット変更に対応

2013-05-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- ActionSequenceSelectorをQDialogの派生クラスとして実装しなおし
	- ActionSequenceSelectorが閉じられた時に行動列の選択をクリアするイベントハンドラを追加
